# STU-B-RRM-001-ForwardKinematics

acceptance_test_rrm_1/test/: rrm1.test
rrm_simple_robot_model/urdf/: arm.urdf
zad1/: CMakeLists.txt  package.xml
zad1/include/zad1/client_gui/: graphic_client.h  terminalDefs.h
zad1/include/zad1/geometry/: forward_kinematics.h
zad1/include/zad1/robot/: robot.h  service_servers.h  topic_publisher.h
zad1/launch/: zad1_core.launch  zad1_ui.launch
zad1/src/client_gui/: client_gui_node.cpp  graphic_client.cpp
zad1/src/geometry/: forward_kinematics.cpp  geometry_node.cpp  scrap.txt
zad1/src/robot/: robot.cpp  robot_node.cpp  service_servers.cpp  topic_publisher.cpp
