<?xml version="1.0"?>
<package format="2">
  <name>zad1</name>
  <version>0.0.0</version>
  <description>The zad1 package</description>

  <author email="xsykorka@stuba.sk">Marek Sykorka</author>
  <maintainer email="xsykorka@stuba.sk">Marek Sykorka</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rrm_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <export>
  </export>
</package>
